# django-field-logger

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: django-field-logger-ci.yml  django.yml  publish.yml
fieldlogger/: __init__.py  apps.py  config.py  encoding.py  fieldlogger.py  managers.py  mixins.py  models.py  signals.py  utils.py
fieldlogger/migrations/: 0002_fieldlog_fieldlogger_instance_idx.py  0003_alter_fieldlog_timestamp.py
fieldlogger/tests/testapp/: apps.py  models.py
tests/: conftest.py  helpers.py  settings.py  test_config.py  test_encoding.py  test_fieldlogger.py  test_logging.py  test_m2m.py  test_managers.py  test_models.py  test_queryset_logging.py  test_signals.py  test_utils.py  tests.py
tests/testapp/: models.py
