[metadata]
name = django-field-logger
version = 0.0.24
description = A Django app for logging changes in model fields.
long_description = file: README.rst, LICENSE
author = Sergio Rodríguez
author_email = srodriguez3441@gmail.com
maintainer = Sergio Rodríguez
maintainer_email = srodriguez3441@gmail.com
url = https://github.com/nibblex/django-field-logger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools>=42
install_requires=
    Django>=4.0
